fixed white spaces bug in whole page and carousel

--- a/assets/frontend/assets/css/bootstrap.css
+++ b/assets/frontend/assets/css/bootstrap.css
@@ -472,8 +472,9 @@ pre {
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px; }
+  /* margin-right: -15px;
+  margin-left: -15px;  */
+}
 
 .no-gutters {
   margin-right: 0;
